--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .panel {
-	background-size: auto cover;
+	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
 	height: 80vh;
