--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@ body {
 	background-size: contain;
 	background-position: center;
 	background-repeat: no-repeat;
-	height: 80vh;
-	border-radius: 50px;
+	height: 90vh;
+	border-radius: 20px;
 	color: rgb(251, 205, 205);
 	cursor: pointer;
 	flex: 0.5;
@@ -33,7 +33,7 @@ body {
 
 .panel h3 {
 	font-size: 24px;
-	position: absolute;
+	position: fixed;
 	bottom: 20px;
 	left: 20px;
 	margin: 0;
